--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
 </head>
-<body style="margin:0">
+<body style="
+    display: block;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"
+>
   <div id="root"></div>
 </body>
 </html>
